# 1rbc

./: .gitignore  README.md  format_experiments.py  requirements.txt  run_experiments.sh  sample.csv  true_values.txt
python/: baseline_ibis_duckdb.py  baseline_pandas.py  baseline_polars.py  utils.py  v0_builtin.py  v1_pypy_list.py  v2_pypy_bytes.py  v3_pypy_temp_parsing.py  v4_pypy_mp.py  v5_pypy_mp_v2.py
results/python/: results_baseline_ibis_duckdb.json  results_baseline_pandas.json  results_baseline_polars.json  results_v0_builtin.json  results_v0_builtin_with_pypy.json  results_v1_pypy_list.json  results_v2_pypy_bytes.json  results_v3_pypy_temp_parsing.json  results_v4_pypy_mp.json  results_v5_pypy_mp_v2.json
results/rust/: results_v0_buffer_reader.json  results_v1_bytes.json  results_v2_faster_hash.json  results_v3_fast_float.json  results_v4_parse_temp.json  results_v5_mmap.json  results_v6_multi_threading_v1.json
rust/: Cargo.toml
rust/src/: main.rs  utils.rs
