[package]
name = "rbc"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9.1"
csv = "1.3.0"
dashmap = "5.5.3"
fast-float = "0.2.0"
memmap = "0.7.0"
memmap2 = "0.9.4"
rayon = "1.9.0"
rustc-hash = "1.1.0"
